--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -51,18 +51,14 @@
     <div class="w3-teal">
       <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
       <div class="w3-container">
-        <h1>My Page</h1>
+        <h1>My Gegg</h1>
       </div>
     </div>
 
-    <img src="img_car.jpg" alt="Car" style="width:100%">
 
-    <div class="w3-container">
-      <p>In this example, the sidebar is hidden (style="display:none")</p>
-      <p>It is shown when you click on the menu icon in the top left corner.</p>
-      <p>When it is opened, it shifts the page content to the right.</p>
-      <p>We use JavaScript to add a 25% left margin to the div element with id="main" when this happens. The value
-        "25%" matches the width of the sidebar.</p>
+
+    <div class="container">
+      <!-- ici vient la carte -->
     </div>
 
   </div>
