--- a/www/index.html
+++ b/www/index.html
@@ -29,19 +29,21 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-  <meta name="viewport" content="width=device-width, initial-scale=0">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=0"> -->
+  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
+  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css' rel='stylesheet' />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <!-- <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css" <link rel="stylesheet" type="text/css" href="css/index.css">
-  <script src="node_modules/leaflet/dist/leaflet.js"></script> -->
-  <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
-  <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css' rel='stylesheet' />
+  <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css" <link rel="stylesheet" type="text/css" href="css/index.css">
+  <script src="node_modules/leaflet/dist/leaflet.js"></script>
+
   <title>MyGegg</title>
 </head>
 
 <body>
-  <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
+  <!-- <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
     <button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Close &times;</button>
     <a href="#" class="w3-bar-item w3-button">Link 1</a>
     <a href="#" class="w3-bar-item w3-button">Link 2</a>
@@ -56,18 +58,20 @@
         <h1>My Gegg</h1>
       </div>
     </div>
+  </div> -->
 
 
 
-    <div class="container">
-      <!-- ici vient la carte -->
-      <div id="map">
+  <!-- ici vient la carte -->
 
-      </div>
-
-    </div>
-
+  <div id='map' style='position:absolute; 
+      top:0; 
+      bottom:0; 
+      width:100%;'>
   </div>
+
+
+
 
 
 
