--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -43,7 +43,7 @@
 </head>
 
 <body>
-  <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
+  <!-- <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
     <button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Close &times;</button>
     <a href="#" class="w3-bar-item w3-button">Link 1</a>
     <a href="#" class="w3-bar-item w3-button">Link 2</a>
@@ -58,7 +58,7 @@
         <h1>My Gegg</h1>
       </div>
     </div>
-  </div>
+  </div> -->
 
 
 
