--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -43,35 +43,45 @@
 </head>
 
 <body>
-  <!-- <div class="w3-sidebar w3-bar-block w3-card w3-animate-left" style="display:none" id="mySidebar">
-    <button class="w3-bar-item w3-button w3-large" onclick="w3_close()">Close &times;</button>
-    <a href="#" class="w3-bar-item w3-button">Link 1</a>
-    <a href="#" class="w3-bar-item w3-button">Link 2</a>
-    <a href="#" class="w3-bar-item w3-button">Link 3</a>
-  </div>
+  <div>
+    <nav class="navbar navbar-expand-lg navbar-info bg-info" id="fond">
+      <!-- <a class="navbar-brand" href="#">logo Cantoloup</a> -->
+      <!-- BOUTON MENU hamburger -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-  <div id="main">
-
-    <div class="w3-teal">
-      <button id="openNav" class="w3-button w3-teal w3-xlarge" onclick="w3_open()">&#9776;</button>
-      <div class="w3-container">
-        <h1>My Gegg</h1>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <button id="admin" class="btn btn-secondary my-2 my-sm-0" type="submit">Admin</button><span class="sr-only">(current)</span></a>
+          </li>
+          <!-- BOUTON/MENU CATEGORIES -->
+          <li>
+            <select name="selectCat" id="selectCat" placeholder="Catégories">
+              <option selected="selected" value="Catégories...">Catégories...</option>
+            </select>
+          </li>
+        </ul>
       </div>
-    </div>
-  </div> -->
-
-
-
+      <div id="search">
+        <form class="form-inline my-2 my-lg-0">
+          <input id="inputSearch" class="form-control mr-sm-2" type="search" placeholder="Recherche..." aria-label="Search">
+        </form>
+      </div>
+    </nav>
+  </div>
   <!-- ici vient la carte -->
 
-  <div id='map' style='position:absolute; 
-      top:0; 
-      bottom:0; 
-      width:100%;'>
+  <div id='map' style='width: 100%; height: 600px; margin:auto;'>
+
   </div>
   <div class="marker">
 
   </div>
+
+
 
 
 
