--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -1,22 +1,5 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
 
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
 
 <head>
@@ -29,56 +12,149 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=0"> -->
-  <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css' rel='stylesheet' />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
+  <link rel="stylesheet" type="text/css" href="css/index.css">
+
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css" <link rel="stylesheet" type="text/css"
-    href="css/index.css">
+  <link rel="stylesheet" href="node_modules/leaflet/dist/leaflet.css">
+
 
   <!-- Font Awesome JS -->
-  <script src="nodes_modules/@fortawesome/fontawesome/js/solid.js"></script>
-  <script src="nodes_modules/@fortawesome/fontawesome/js/fontawesome.js"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/solid.js"
+    integrity="sha384-tzzSw1/Vo+0N5UhStP3bvwWPq+uvzCMfrN1fEFe+xBmv1C/AtVX5K0uZtmcHitFZ"
+    crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/fontawesome.js"
+    integrity="sha384-6OIrr52G08NpOFSZdxxz1xdNSndlD4vdcf/q2myIUVO0VsqaGHJsB0RaBE01VTOY"
+    crossorigin="anonymous"></script>
+
   <script src="node_modules/leaflet/dist/leaflet.js"></script>
 
   <title>MyGegg</title>
 </head>
 
 <body>
+  <!---------------------------------SIDE BAR--------------------------------------->
+  <div class="wrapper">
+    <!-- Sidebar Holder -->
+    <nav id="sidebar">
+      <div class="sidebar-header">
+        <h3>MyGEGG</h3>
+      </div>
+
+      <ul class="list-unstyled components">
+        <p>trier offres</p>
+        <li class="active">
+          <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Par Catégories</a>
+          <ul class="collapse list-unstyled" id="homeSubmenu">
+            <li>
+              <a href="#">Gastronomie & Alimentations </a>
+            </li>
+            <li>
+              <a href="#">Bien être</a>
+            </li>
+            <li>
+              <a href="#">Loisirs</a>
+            </li>
+            <li>
+              <a href="#">Tourisme</a>
+            </li>
+            <li>
+              <a href="#">Magasins spécialisés</a>
+            </li>
+            <li>
+              <a href="#">Services</a>
+            </li>
+            <li>
+              <a href="#">Autres</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+
+          <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Types d'offres</a>
+          <ul class="collapse list-unstyled" id="pageSubmenu">
+            <li>
+              <a href="#">Remise</a>
+            </li>
+            <li>
+              <a href="#">Cadeaux</a>
+            </li>
+            <li>
+              <a href="#">Avantages</a>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+        </li>
+      </ul>
+
+    </nav>
+
+    <!-- Page Content Holder -->
+    <div id="content">
+
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+
+          <button type="button" id="sidebarCollapse" class="navbar-btn">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse"
+            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <i class="fas fa-align-justify"></i>
+          </button>
 
 
-
-  <!-- ici vient la carte -->
-
-  <div id='map' style='width: 100%; height: 600px; margin:auto;'>
-
-  </div>
-  <div class="marker">
-
-  </div>
-  </div>
+        </div>
+      </nav>
 
 
+      <!-- ici vient la carte -->
+
+      <div id='map' style='width: 100%; height:100%; margin:auto;'>
+
+      </div>
+      <div class="marker">
+
+      </div>
+    </div>
 
 
+    <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/initDb.js"></script>
 
+    <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
-
-
-  <script type="text/javascript" src="cordova.js"></script>
-  <script type="text/javascript" src="js/index.js"></script>
-  <script type="text/javascript" src="js/initDb.js"></script>
-  <script type="text/javscript" src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-  <script type="text/javascript" src="node_modules/jquery/dist/jquery.min.js"></script>
-  <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
-  <!-- <script type="text/javascript" src="node_modules/mdbootstrap/js/mdb.min.js"></script> -->
-
+    <!-- cdn test side bar-->
+    <!-- Popper.JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
+      integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
+      crossorigin="anonymous"></script>
+    <!-- <script side bar -->
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#sidebarCollapse').on('click', function () {
+          $('#sidebar').toggleClass('active');
+          $(this).toggleClass('active');
+        });
+      });
+    </script>
 </body>
 
 </html>
