suite request db pour markers

--- a/platforms/browser/www/index.html
+++ b/platforms/browser/www/index.html
@@ -61,7 +61,9 @@
         <p>FILTRE PAR</p>
         <li class="active">
           <a href="#listCat" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle" name="selectCat"
-            id="selectCat" placeholder="Categories">CATEGORIES</a>
+            id="selectCat" placeholder="Categories">
+            <option>CATEGORIES</option>
+          </a>
           <ul class="collapse list-unstyled" id="listCat">
             <li>
             </li>
